# simulator-core

./: .buildinfo  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  cluster3_spars_year  code-review_MT.md  dev-requirements.txt  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  run.sh  search.html  searchindex.js
.github/agents/: APIReferenceAgent.agent.md  ControllerBehaviorDocAgent.agent.md  DeveloperGuideAgent.agent.md  DocReviewAgent.agent.md  Documentation.agent.md  DocumentationBase.agent.md  DocumentationCoordinator.agent.md  NavigationAgent.agent.md  NetworkLayerDocAgent.agent.md  PhysicsAssetDocAgent.agent.md  RstSyntaxAgent.agent.md  SolverBehaviorDocAgent.agent.md  SphinxValidationAgent.agent.md  SupportDocAgent.agent.md  SystemConceptDocAgent.agent.md
.github/instructions/: documentation-architecture.instructions.md
.github/workflows/: BuildTest_win32.yml  ci.yml  codeql-analysis.yml  documentation.yml  release.yml  upload_rosim_to_release.yml
_sources/architecture/: esdl_object.rst.txt  network_simulation.rst.txt  simulation_manager.rst.txt
_sources/assets/: ates_asset.rst.txt  consumer_asset.rst.txt  pipe_asset.rst.txt
_sources/controller/: controller_behavior.rst.txt  sub_network_class.rst.txt
_sources/developer/: developer_main.rst.txt  developer_navigation.rst.txt
_sources/network/: network_main.rst.txt
_sources/physics/: air_to_water_heat_pump_physics.rst.txt
_sources/solver/: asset_main.rst.txt  matrix.rst.txt  network.rst.txt  solver.rst.txt
architecture/: architecture.html  asset_factories.html  configuration.html  esdl_asset_object.html  esdl_object.html  network_simulation.html  simulation_manager.html
assets/: air_to_water_heat_pump_asset.html  asset_abstract_asset.html  asset_defaults_asset.html  asset_utils_asset.html  ates_asset.html  consumer_asset.html  esdl_asset_object_asset.html  heat_exchanger_asset.html  heat_pump_asset.html  ideal_heat_storage_asset.html  junction_asset.html  pipe_asset.html  producer_asset.html  pyjnius_loader_asset.html
ci/linux/: _load_dot_env.sh  build_python_package.sh  check_formatting.sh  create_venv.sh  format.sh  install_dependencies.sh  install_dev.sh  lint.sh  test_unit.sh  typecheck.sh  update_dependencies.sh
ci/win32/: check_formatting.cmd  check_java_jdk.cmd  create_venv.cmd  format.cmd  install_dependencies.cmd  install_dev.cmd  lint.cmd  profile.cmd  profiler.cmd  profiling.cmd  test_unit.cmd  typecheck.cmd  update_dependencies.cmd
controller/: controller.html  controller_behavior.html  main_controller_class.html  sub_network_class.html
controller/assets/: asset_controller_abstract.html  ates.html  consumer.html  controller_heat_transfer.html  controller_network.html  controller_storage.html  producer.html  profile_interpolation.html
developer/: developer_main.html  developer_navigation.html
developer/api/: omotes_simulator_core.adapter.html  omotes_simulator_core.adapter.presentation.html  omotes_simulator_core.adapter.transforms.controller_mapper.html  omotes_simulator_core.adapter.transforms.controller_mappers.controller_consumer_mapper.html  omotes_simulator_core.adapter.transforms.controller_mappers.controller_heat_transfer_mapper.html  omotes_simulator_core.adapter.transforms.controller_mappers.controller_producer_mapper.html  omotes_simulator_core.adapter.transforms.controller_mappers.controller_storage_mapper.html  omotes_simulator_core.adapter.transforms.controller_mappers.html  omotes_simulator_core.adapter.transforms.esdl_asset_mapper.html  omotes_simulator_core.adapter.transforms.esdl_asset_mappers.ates_mapper.html  omotes_simulator_core.adapter.transforms.esdl_asset_mappers.consumer_mapper.html  omotes_simulator_core.adapter.transforms.esdl_asset_mappers.heat_exchanger_mapper.html  omotes_simulator_core.adapter.transforms.esdl_asset_mappers.heat_pump_mapper.html  omotes_simulator_core.adapter.transforms.esdl_asset_mappers.html  omotes_simulator_core.adapter.transforms.esdl_asset_mappers.ideal_heat_storage_mapper.html  omotes_simulator_core.adapter.transforms.esdl_asset_mappers.pipe_mapper.html  omotes_simulator_core.adapter.transforms.esdl_asset_mappers.producer_mapper.html  omotes_simulator_core.adapter.transforms.esdl_graph_mapper.html  (+70 more)
doc/: .readthedocs.yaml  conf.py  create_env.bat  index.rst  requirements.txt  run_spinx.bat
doc/Controller/: controller.rst
intro/: audience_and_use_cases.html  intro_main.html  package_scope.html  simulation_input_and_output.html
network/: network_main.html
physics/: air_to_water_heat_pump_physics.html  ates_cluster_physics.html  consumer_physics.html  heat_exchanger_physics.html  heat_pump_physics.html  ideal_heat_storage_physics.html  junction_physics.html  physics_main.html  pipe_physics.html  producer_physics.html
reference/: architecture_reference.html  asset_reference.html  asset_uncovered_entities.html  controller_reference.html  controller_uncovered_entities.html  solver_reference.html  solver_uncovered_entities.html
solver/: asset_main.html  equation_object.html  matrix.html  network.html  solver.html  solver_behavior.html  solver_convergence.html  solver_main.html  solver_unknowns_and_equations.html  solver_utility.html  solver_workflow.html
src/: runscript.py
support/: support.html
testdata/: 2sources.esdl  Simple_heat_exchange.esdl  a2w_hp_test.esdl  ates_network.esdl  heat_pump_bypass.esdl  heat_transfers_test.esdl  hp_test_env.esdl  simple_heat_exchanger.esdl  simple_heat_pump.esdl  test.esdl  test1.esdl  test1.pkl  test1_eboiler.esdl  test1_heatloss.esdl  test1_prod_profile.esdl  test_2_sources.esdl  test_ates.esdl  test_ates_and_storages.esdl  test_buffer.esdl  test_dtk_1.esdl  test_dtk_10.esdl  test_dtk_2.esdl  test_dtk_3.esdl  test_dtk_4.esdl  test_dtk_5.esdl  test_dtk_6.esdl  test_dtk_7.esdl  test_dtk_8.esdl  test_dtk_8_parallel.esdl  test_dtk_9.esdl  test_for_optimization.esdl  test_heat_buffer.esdl  test_hex_env.esdl  test_multiple_connection.esdl  test_optimized.esdl  test_pipe_material.esdl  test_pipe_roughness.esdl
unit_test/: test_main.py
(+476 files in other folders)
