[project]
name = "omotes-simulator-core"
dynamic = ["version"]
authors = [{ name = "Michiel Tukker", email = "michiel.tukker@deltares.nl" }]
description = "Core library of the OMOTES simulator"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy~=2.1.0",
    "pandas~=2.2.2",
    "scipy~=1.14.1",
    "pyesdl~=24.2.0",
    "dataclass-wizard~=0.22.3",
    "influxdb~=5.3.2",
    "pyjnius~=1.6.1",
]

[project.optional-dependencies]
dev = [
    "pip-tools~=7.4.1",
    "setuptools-git-versioning>=2.0, <3",
    "black~=24.8.0",
    "flake8~=7.1.1",
    "Flake8-pyproject~=1.2.3",
    "flake8-docstrings~=1.7.0",
    "flake8-quotes~=3.4.0",
    "flake8-pytest-style~=2.0.0",
    "flake8-bugbear~=24.8.19",
    "flake8-mock~=0.4",
    "flake8-tuple~=0.4.1",
    "pytest~=7.4.4",
    "pytest-cov~=5.0.0",
    "mypy~=1.11.2",
    "build~=1.0.3",
    "sphinx~=8.0.2",
    "furo~=2024.8.6",
    "geopandas~=1.0.1",
    "plotly~=5.24.0",
    "shapely~=2.0.6",
]

[project.urls]
homepage = "https://www.nwn.nu"
documentation = "https://readthedocs.org"
repository = "https://github.com/Project-OMOTES/simulator-core"
changelog = "https://github.com/Project-OMOTES/simulator-core/blob/main/CHANGELOG.md"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools ~= 69.0.3",
    "wheel ~= 0.40.0",
    "setuptools-git-versioning>=2.0,<3",
]

[tool.setuptools-git-versioning]
enabled = true
starting_version = "0.0.1"
version_file = "src/omotes_simulator_core/VERSION"
count_commits_from_version_file = true
dev_template = "{tag}.dev{ccount}"
dirty_template = "{tag}.dev{ccount}"


# [tool.setuptools]
# packages = ["src/omotes_simulator_core"]

[tool.pytest.ini_options]
addopts = "--cov=omotes_simulator_core --cov-report html --cov-report term-missing --cov-fail-under 80"
testpaths = ["unit_test"]

[tool.coverage.run]
source = ["src"]

[tool.flake8]
max-line-length = 100
count = true
ignore = [
    'Q000',  # Remove bad quotes
    'D401',  # Docstring First line should be imperative
    'E203',  # Space before colon (not PEP-8 compliant, and conflicts with black)
    'C408',  # Suggestion to use dict() over {}
    'W503',  # Starting lines with operators.
    'PT009', # use a regular assert instead of unittest-style assertion
    'PT027', # pytest.raises() should be used instead of assertRaises()
]
exclude = ['.venv/*', 'venv/*', 'doc/*']
per-file-ignores = ['__init__.py:F401', 'unit_test/*:D100,D104']

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
follow_imports_for_stubs = true
exclude = ['.venv/*', 'venv/*', 'doc/*', 'ci/*']

# mypy per-module options:
[[tool.mypy.overrides]]
module = ["unit_test.*"]
disallow_incomplete_defs = false
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = false
