[project]
name = "omotes-simulator-core"
dynamic = ["version"]
authors = [{ name = "Michiel Tukker", email = "michiel.tukker@deltares.nl" }]
description = "Core library of the OMOTES simulator"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy~=2.1.0",
    "pandas~=2.2.2",
    "scipy~=1.14.1",
    "pyesdl~=25.7",
    "dataclass-wizard~=0.22.3",
    "influxdb~=5.3.2",
    "pyjnius~=1.6.1",
    "CoolProp~=6.6.0",
    "NetworkX~=2.7.0",
]

[project.optional-dependencies]
dev = [
    "setuptools ~= 75.6.0",
    "wheel ~= 0.45.1",
    "setuptools-git-versioning >= 2.0, < 3",
    "black == 24.10.0",
    "flake8 == 7.1.1",
    "flake8-pyproject ~= 1.2.3",
    "flake8-docstrings ~= 1.7.0",
    "flake8-quotes ~= 3.4.0",
    "flake8-bugbear ~= 24.10.31",
    "flake8-mock ~= 0.4",
    "flake8-tuple ~= 0.4.1",
    "pytest ~= 8.3.4",
    "pytest-cov ~= 6.0.0",
    "mypy ~= 1.13.0",
    "isort == 6.1.0",
    "build ~= 1.2.2",
    "sphinx~=8.0.2",
    "furo~=2024.8.6",
    "geopandas~=1.0.1",
    "plotly~=5.24.0",
    "shapely~=2.0.6",
    "snakeviz==2.2.0",
    "types-requests ~= 2.28.11",
]

[project.urls]
homepage = "https://www.nwn.nu"
documentation = "https://readthedocs.org"
repository = "https://github.com/Project-OMOTES/simulator-core"
changelog = "https://github.com/Project-OMOTES/simulator-core/blob/main/CHANGELOG.md"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools ~= 75.6.0",
    "wheel ~= 0.45.1",
    "setuptools-git-versioning >= 2.0, < 3",
]

[tool.setuptools-git-versioning]
enabled = true
starting_version = "0.0.1"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
"omotes_simulator_core" = [
    "entities/assets/bin/ates_sequential_temp.xml",
    "entities/assets/bin/jfxrt.jar",
    "entities/assets/bin/sequentialTemplate_v1.2.0_template.xml",
]

[tool.pytest.ini_options]
addopts = "--cov=omotes_simulator_core --cov-report html --cov-report term-missing --cov-fail-under 90"
testpaths = ["unit_test"]

[tool.coverage.run]
source = ["src"]

[tool.flake8]
max-line-length = 100
count = true
ignore = [
    'Q000',  # Remove bad quotes
    'D401',  # Docstring First line should be imperative
    'E203',  # Space before colon (not PEP-8 compliant, and conflicts with black)
    'C408',  # Suggestion to use dict() over {}
    'W503',  # Starting lines with operators.
    'PT009', # use a regular assert instead of unittest-style assertion
    'PT027', # pytest.raises() should be used instead of assertRaises()
]
exclude = [
    '.venv/*',
    'venv/*',
    'doc/*',
    'src/omotes_simulator_core/solver/utils/fluidprop.py',
]
per-file-ignores = [
    '__init__.py:F401',
    'unit_test/*:D100,D101,D102,D103,D104,D105,D106',
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
follow_imports_for_stubs = true
exclude = ['.venv/*', 'venv/*', 'doc/*', 'ci/*']

# mypy per-module options:
[[tool.mypy.overrides]]
module = ["unit_test.*"]
disallow_incomplete_defs = false
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = false
